@@ -184,6 +184,7 @@ L["Display cooldown text on anything with the cooldown spiril."] = "Display cool
 L["Display level text on nameplate for nameplates that belong to units that aren't your level."] = "Display level text on nameplate for nameplates that belong to units that aren't your level."
 L["Display macro names on action buttons."] = "Display macro names on action buttons."
 L["Display Player"] = "Display Player"
+L["Display the hyperlink tooltip while hovering over a hyperlink."] = "Display the hyperlink tooltip while hovering over a hyperlink."
 L["Display the item id on item tooltips."] = "Display the item id on item tooltips."
 L["Display tick marks on the castbar for channelled spells. This will adjust automatically for spells like Drain Soul and add additional ticks based on haste."] = "Display tick marks on the castbar for channelled spells. This will adjust automatically for spells like Drain Soul and add additional ticks based on haste."
 L["Display your personal debuffs over the nameplate."] = "Display your personal debuffs over the nameplate."
@@ -279,6 +280,7 @@ L["Hover your mouse over any actionbutton or spellbook button to bind it. Press 
 L["How far away the portrait is from the camera."] = "How far away the portrait is from the camera."
 L["HP"] = "HP"
 L["HPS"] = "HPS"
+L["Hyperlink Hover"] = "Hyperlink Hover"
 L["Icon"] = "Icon"
 L["If not set to true then the server time will be displayed instead."] = "If not set to true then the server time will be displayed instead."
 L["If set only auras belonging to yourself in addition to any aura that passes the set filter may be shown."] = "If set only auras belonging to yourself in addition to any aura that passes the set filter may be shown."
@@ -365,6 +367,7 @@ L["No gray items to sell."] = "No gray items to sell."
 L["None"] = "None"
 L["Non-Raid Frame"] = "Non-Raid Frame"
 L["Not valid spell id"] = "Not valid spell id"
+L["Number of time in seconds to scroll down to the bottom of the chat window if you are not scrolled down completely."] = "Number of time in seconds to scroll down to the bottom of the chat window if you are not scrolled down completely."
 L["Num Rows"] = "Num Rows"
 L["O"] = "O"
 L["Offhand"] = "Offhand"
@@ -414,6 +417,7 @@ L["Power"] = "Power"
 L["Powers"] = "Powers"
 L["Power text will be hidden on NPC targets, in addition the name text will be repositioned to the power texts anchor point."] = "Power text will be hidden on NPC targets, in addition the name text will be repositioned to the power texts anchor point."
 L["Prevent any nameplate with this unit name from showing."] = "Prevent any nameplate with this unit name from showing."
+L["Prevent the same messages from displaying in chat more than once within this set amount of seconds, set to zero to disable."] = "Prevent the same messages from displaying in chat more than once within this set amount of seconds, set to zero to disable."
 L["Primary Talents"] = "Primary Talents"
 L["Primary Texture"] = "Primary Texture"
 L["Procs"] = "Procs"
@@ -464,6 +468,7 @@ L["Save"] = "Save"
 L["Saved Raid(s)"] = "Saved Raid(s)"
 L["says"] = "says"
 L["Scale"] = "Scale"
+L["Scroll Interval"] = "Scroll Interval"
 L["Secondary Texture"] = "Secondary Texture"
 L["Seconds"] = "Seconds"
 L["Select a filter to use."] = "Select a filter to use."
@@ -509,6 +514,7 @@ L["Sort Special"] = "Sort Special"
 L["SP"] = "SP"
 L["Spaced"] = "Spaced"
 L["Spacing"] = "Spacing"
+L["Spam Interval"] = "Spam Interval"
 L["Spark"] = "Spark"
 L[ [=[Specify a filename located inside the World of Warcraft directory. Textures folder that you wish to have set as a panel background.
 
@@ -692,9 +698,7 @@ L["Your current resolution is %s, this is considered a %s resolution."] = "Your 
 L["Your items have been repaired for: "] = "Your items have been repaired for: "
 L["Your items have been repaired using guild bank funds for: "] = "Your items have been repaired using guild bank funds for: "
 L["Your version of ElvUI is out of date. You can download the latest version from www.curse.com"] = "Your version of ElvUI is out of date. You can download the latest version from www.curse.com"
-L['Hyperlink Hover'] = true;
-L['Display the hyperlink tooltip while hovering over a hyperlink.'] = true;
-L['Spam Interval'] = true;
-L['Prevent the same messages from displaying in chat more than once within this set amount of seconds, set to zero to disable.'] = true;
-L['Scroll Interval'] = true;
-L['Number of time in seconds to scroll down to the bottom of the chat window if you are not scrolled down completely.'] = true;
+L["You need to be at least level %d to whisper me."] = true;
+L["You have reached the maximum amount of friends, remove 2 for this module to function properly."] = true;
+L['Whisper Level'] = true;
+L["Minimum level of the sender to able to whisper you."] = true;
